[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Quick-start for Python packages
download_url = https://github.com/limix/pystart
keywords = quick start, package, setup, python
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=ASCII
maintainer = Danilo Horta
platforms = OS Independent, Windows, MacOS, POSIX, POSIX :: Linux
maintainer_email = horta@ebi.ac.uk
name = pystart
setup_requires = pytest-runner
url = https://github.com/limix/pystart
version = attr: pystart.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:

[aliases]
test = pytest

[tool:pytest]
addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
norecursedirs = .eggs .git *.egg-info build
pep8ignore = E402 E501
